fixed prod desc. alignment

--- a/src/styles/navbar/profile.scss
+++ b/src/styles/navbar/profile.scss
@@ -6,7 +6,7 @@
   align-items: center;
   width: 80px;
   height: 103px;
-  border: 2px solid red;
+  //border: 2px solid red;
 
 
   @media (max-width: 821px) {
@@ -23,7 +23,7 @@
     height: 100%;
     width: 50%;
     cursor: pointer;
-    border: 1px solid green;
+    //border: 1px solid green;
   }
 
   img {
